# MiddleProject2

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md
include/: InertialDriver.h  Lettura.h  Misura.h  MyVector.h  MyVector.hpp
src/: InertialDriver.cpp  Misura.cpp  exec  main.cpp  program  test  test.cpp
